# tasksync

./: .coveragerc  .gitignore  MANIFEST.in  README.md  install_hooks.py  pyproject.toml  setup.py
hooks/: on-add-todoist.py  on-modify-todoist.py
tasksync/: __init__.py  cli.py  common.py  from_todoist.py  hooks.py  models.py  taskwarrior.py  todoist.py  translator.py  util.py
tasksync/adapters/: todoist.py
tasksync/hooks/: on-add-create-todoist.py  on-add-todoist.py  on-modify-todoist.py
tasksync/server/: __init__.py  client.py  const.py  protocol.py  server.py
tasksync/sync/: __init__.py  main.py  todoist.py
tasksync/taskwarrior/: __init__.py  models.py
tasksync/test/: test_cli.py  test_data.py  test_hooks.py  test_taskwarrior.py  test_todoist.py  test_translator.py
tasksync/test/data/: items.json  sections.json  sync_tokens.json
tasksync/todoist/: __init__.py  adapter.py  api.py  models.py  provider.py
test/: test_api.py  test_data.py  test_hooks.py  test_parsers.py  test_taskwarrior.py  test_todoist.py  test_translator.py
test/data/: items.json  projects.json  sync_tokens.json
test/data/test/: sync_tokens.json
